--- a/css/main.css
+++ b/css/main.css
@@ -1135,6 +1135,7 @@ blockquote p:last-of-type:after {
   padding: 20px;
   background-color: rgba(0, 0, 0, 0.05);
   color: #666;
+  margin-bottom: 20px;
   /**
    * Remove the margin from the last element in the sub-content area so as to
    * avoid doubled spacings (compounded paddings and margins).
